--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="conteiner-top">
         <div class="head">
             <div class="logo">
-                <img src="/images/logo-1.svg" class="logo-1">
-                <img src="/images/logo-2.svg" class="logo-2">
+                <img src="./images/logo-1.svg" class="logo-1">
+                <img src="./images/logo-2.svg" class="logo-2">
             </div>
             <div class="nav-header">
             <nav>
@@ -23,7 +23,7 @@
                 </div>
               </nav>
               <button type="submit" id="button-2">
-                <img src="/images/Icon.svg" class="header-icon">
+                <img src="./images/Icon.svg" class="header-icon">
                 </button>
             </div>
         </div>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="green-button">
                     <button type="submit " class="green-button-text">GET STARTTED
-        <img src="/images/Vector (1).svg" class="vector">
+        <img src="./images/Vector (1).svg" class="vector">
                     </button>
                 </div>
                 </div>
@@ -56,26 +56,26 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. A praesentium quaerat, officiis maxime placeat tenetur saepe animi ducimus, expedita sit, eum minus vitae iusto. Ipsum architecto iste in! Repudiandae, commodi.</P>
                 <div class="green-button">
                     <button type="submit " class="green-button-text">GET STARTTED
-        <img src="/images/Vector (1).svg" class="vector">
+        <img src="./images/Vector (1).svg" class="vector">
                     </button>
                 </div>
             </div>
             <div class="column-part">
             <div class="car">
-                <img src="/images/smart-car.svg " class=" car-1 icon">
+                <img src="./images/smart-car.svg " class=" car-1 icon">
         <h4 class=" car-icon-title icon-title">CAR RENTAL </h4>
         <P class="car-icon-text icon-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab officiis a</P>
             </div>
             <div class="BOUT CRUISE">
-                <img src="/images/ship.svg" class=" bout-1 icon">
+                <img src="./images/ship.svg" class=" bout-1 icon">
         <h4 class=" bout-icon-title icon-title">BOUT CRUISE </h4>
         <P class="bout-icon-text icon-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab officiis a</P>
             </div> <div class="bus">
-                <img src="/images/bus.svg" class=" bus-1 icon">
+                <img src="./images/bus.svg" class=" bus-1 icon">
         <h4 class=" bus-icon-title icon-title">BUS TRIP </h4>
         <P class="bus-icon-text icon-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab officiis a</P>
             </div> <div class="roud">
-                <img src="/images/driving.svg" class=" road-1 icon">
+                <img src="./images/driving.svg" class=" road-1 icon">
         <h4 class=" road-icon-title icon-title">ROUD TRIP </h4>
         <P class="road-icon-text icon-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab officiis a</P>
             </div>
@@ -91,17 +91,17 @@
         
             <div class="middle-part">
             <div class="pyhthon">
-            <img src="/images/python.svg" class=" pyhthon-icon">
+            <img src="./images/python.svg" class=" pyhthon-icon">
             <h4 class=" pyhthon-icon-title icon-title">MOT CONSECTET</h4>
             <P class="pyhthon-icon-text icon-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab officiis a</P>
             </div>
             <div class="iost">
-                <img src="/images/iost-(iost).svg" class=" iost-icon">
+                <img src="./images/iost-(iost).svg" class=" iost-icon">
                 <h4 class=" iost-icon-title icon-title">MOT CONSECTET</h4>
                 <P class="iost-icon-text icon-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab officiis a</P>
                 </div>
                 <div class="stacks">
-                    <img src="/images/stacks-(stx).svg" class=" stacks-icon">
+                    <img src="./images/stacks-(stx).svg" class=" stacks-icon">
                     <h4 class=" stacks-icon-title icon-title">MOT CONSECTET</h4>
                     <P class="stacks-icon-text icon-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab officiis a</P>
                     </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="conteiner-hover">
                 <div class="hover-img">
-                    <img src="/images/pexels-photo-3184338 1 (2).svg" class="hover-picture">
+                    <img src="./images/pexels-photo-3184338 1 (2).svg" class="hover-picture">
                 </div>
                     <div class="hover-cart tittle-2">
                         <h3 class="subtitle">MOT CONSECTET</h3>
@@ -118,7 +118,7 @@
                         "Lorem ipsum dolor sit amet consectetur adipisicing elit. A praesentium quaerat, officiis maxime' .</P>
                         <div class="green-button">
                             <button type="submit " class="green-button-text">GET STARTTED
-                <img src="/images/Vector (1).svg" class="vector">
+                <img src="./images/Vector (1).svg" class="vector">
                             </button>
                         </div>
                 </div>
@@ -132,14 +132,14 @@
                         </div>
                   
                     <div class="button-conteiner">
-                        <img src="/images/Vector (3).svg" class="vector-1">
-                        <img src="/images/down-arrow 2 (1).svg" class="vector-2">
+                        <img src="./images/Vector (3).svg" class="vector-1">
+                        <img src="./images/down-arrow 2 (1).svg" class="vector-2">
                     </div>
                 </div>
                 <div class="last-conteiner-second">
                 <div class="last-conteiner-second-part">
                     <div class="last-conteiner-second-part-cart">
-                        <img src="/images/man-2.svg" class="cart">
+                        <img src="./images/man-2.svg" class="cart">
                         <div class="tittle-part">
             <h4 class="cart-title">CTO MAY & BAKER</h4>
             <p class="cart-subtittle"> Tayo Oshinuwa</p>
@@ -150,7 +150,7 @@
         </div>
         <div class=" last-conteiner-second-part last-conteiner-second-girl">
         <div class="last-conteiner-second-part-cart">
-            <img src="/images/girl.svg" class="cart">
+            <img src="./images/girl.svg" class="cart">
             <div class="tittle-part">
         <h4 class="cart-title">CTO MAY & BAKER</h4>
         <p class="cart-subtittle"> Tayo Oshinuwa</p>
@@ -162,7 +162,7 @@
         </div>
         <div class=" last-conteiner-second-part last-conteiner-second-man-2">
            <div class="last-conteiner-second-part-cart">
-            <img src="/images/man.svg" class="cart">
+            <img src="./images/man.svg" class="cart">
             <div class="tittle-part">
         <h4 class="cart-title">CTO MAY & BAKER</h4>
         <p class="cart-subtittle"> Tayo Oshinuwa</p>
@@ -181,8 +181,8 @@
         <footer>
         <div class="footer-1-part">
             <div class=" logo footer-logo">
-                    <img src="/images/logo-1.svg" class="logo-1">
-                    <img src="/images/logo-2.svg" class="logo-2">
+                    <img src="./images/logo-1.svg" class="logo-1">
+                    <img src="./images/logo-2.svg" class="logo-2">
             </div> 
             <p class="footer-prg">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat, consectetur officia, dicta quisquam ab non ad saepe perferendis explicabo hic maiores deleniti itaque voluptatibus! Dolores in mollitia repellat nulla repellendus?
@@ -196,22 +196,22 @@
         <div class="footer-icon">
             <div class="instagram">
             <a href="#">
-                <img src="/images/instagram.svg" class=" footer-icon insta">
+                <img src="./images/instagram.svg" class=" footer-icon insta">
             </a>
             </div>
             <div class="ball">
                 <a href="#">
-                    <img src="/images/ball.svg" class=" footer-icon ball">
+                    <img src="./images/ball.svg" class=" footer-icon ball">
                 </a>
                 </div>
                 <div class="twitter">
                     <a href="#">
-                        <img src="/images/Twitter.svg" class=" footer-icon twitt">
+                        <img src="./images/Twitter.svg" class=" footer-icon twitt">
                     </a>
                     </div>
                     <div class="youtube">
                         <a href="#">
-                            <img src="/images/Youtube.svg" class=" footer-icon yout">
+                            <img src="./images/Youtube.svg" class=" footer-icon yout">
                         </a>
                         </div>
                      </div>
@@ -257,7 +257,7 @@
         </textarea>
         <div class="green-button">
             <button type="submit " class="green-button-text">GET STARTTED
-        <img src="/images/Vector (1).svg" class="vector">
+        <img src="./images/Vector (1).svg" class="vector">
             </button>
         </div>
         </div>
